styles/style.css
html {
    text-align: center;
    font-family: monospace;
}

#calc {
    display: flex;
    min-height: 95vh;
    justify-content: center;
    align-content: center;
    align-items: center;
    height: 100vh;
    overflow: hidden;
    background-color: azure;
}

#container {
    background-color: black;
    border: 10px solid rgba(47,47,47,1);
    border-radius: 4px;
    display: grid;
    grid-template-columns: repeat(4, 100px);
    grid-template-rows: minmax(100px, auto) repeat(5, 80px);
    gap: 2px;
}

#display {
    grid-column: 1 / -1;
    background-color: #b2b9b7;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: flex-end;
    padding: 5px;
    font-size: 5.5em;
    font-weight: initial;
    text-shadow: 1.3px 1.3px #383838;
    margin: 5px;
}

button {
    margin: 1px;
    border-radius: 5%;
    border: none;
    font-weight: initial;
    font-size: 2em;
    font-family: monospace;
    color: black;
}


#zero {
    grid-column: span 2;
}

.operator {
    background-color: #FF8F1F;    
}

.operator:focus {
    background-color: #ffc183;
}

.equals {
    background-color: #FF8F1F;
}

.equals:active {
    background-color: #ffc183;
}

.operand {
    background-color: #217C7E;
}

.operand:active {
    background-color: #33b9bb;
}

.decimal {
    background-color: #217C7E;
}

.decimal:active {
    background-color: #33b9bb;
}

.clear {
    background-color: dodgerblue;
}

.clear:active {
    background-color: rgb(123, 189, 255);
}

.sign {
    background-color: dodgerblue;
}

.sign:active {
    background-color: rgb(123, 189, 255);
}

.percent {
    background-color: dodgerblue;
}

.percent:active {
    background-color: rgb(123, 189, 255);
}

